--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -178,77 +178,41 @@ Although data mining for association rules finds relations things, it struggles 
     ggplot(tesco[tesco$actual>50,], aes(x=labels, y=actual, fill=labels)) +geom_bar(stat='identity') + coord_flip() + ggtitle('Tesco grocery items with more than 50 products') + theme(legend.position="none", axis.text=element_text(size=9))
 ```
 
-Items in the `Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items.  This is, I would suggest, a form of propensity in Hansen's terms, albeit one that occurs in or very close to the recommender system rather than  'in the world.'  The multiple listed  in the `Grocery` dataset becomes more open in this setting through new possible intersections. HERE , where 'open' complements any possible closure with new intersections. Rather than seeing predictive analytics as a closed form of an open world, I am suggesting that we might begin to locate it in the joint effectuations or intersections within models.      
+Items in the`Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items.  This is, I would suggest, a form of propensity in Hansen's terms, albeit one that occurs in, or very close to, the recommender system rather than  'in the world.' The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The problem that the proliferation of things on the shelves of supermarket or grocery warehouse confronts is partly combinatorial. `r total` products (actually Patel mentioned 200,000 products) can be combined ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially highly interesting and value as recommendation. 
 
-## 4. Hack? Customers go straight to the checkout
+Amidst this proliferation of possibles multiple, the recommender system  starts to become a site of ordering -- in both senses of that term -- of things and people together in shopping lists. They are less the inscriptions of a discrete agent than an effect of an environment teeming with possible combinations and complementarities, a surplus of associations that the market needs to both maintain and limit. For instance, given that Tesco lists more than 1000 chicken products on its site, how can a customer practically discriminate between chicken products? Patel mentioned that some people log on and go straight to the checkout, allowing the recommender system to supply them with the suggestions that they then move to the shopping basket. A `r total` list of items is quite hard to list let alone read. Going straight to the recommendation list is the predictive equivalent of using an old shopping list and only adding new items when needed. 
 
-![Straight to the checkout?](figure/patel_straight_to_checkout.png)
+## Ordering relevance through personhood
 
-Patel said that some people log on and go straight to the checkout, allowing the recommender system to supply them with the suggestions that they then move to the shopping basket. Patel observed that the 'Have you forgotten' lists matter to people, and we can see why in the light of this proliferation of things in the list. A `r total` list of items is quite hard to list let alone read. This is the online equivalent of using an old shopping list and only adding new items when needed. 
-It is also a strategy to avoid having to view too many lists, since the only way Tesco can show people what they might buy is by showing them lists of things (e.g. chicken products), but these lists are often too long to work with. For instance, if Tesco has more than 1000 chicken products on its site, how can a customer even look through the list of chicken products?
+Combinatorial surplus, however, does not exhaust what might be found in the data. The relevancy model that DunnHumby has implemented for Tesco (as for so many other online businesses) seeks to balance the tensions between proliferating associations and relative closure. It responds to the problem of a world where the propensities of things and the propensities of people mingle with each other, yet threaten to disorder the list, the site of their mutual ordering.[^181.1] Big data discourse in its promissory mode attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schönberger_2013]. The ontological transformation that media theorists such as Hansen suggests actually play out somewhat more conventionally: the associative propensities of things in the shopping list (as constructed by a recommender system) come together with forms of personhood associated with buying. A model of personhood based on purchase data delimits the propensities of things. 
 
-People inhabit lists and work with them no matter how they are made; thus vindicating ethnomethodologists assertion that social order is the product of ongoing sense-making practices. [^45] But the predicted list also suggests a transformation in the way that lists exist in the world. They are less the inscriptions of a discrete agent than an effect of an environment teeming with possible combinations and complementaries, a surplus of possible purchases that the supermarket needs to continually maintain but also filter in order to make it possible for something to happen. 
+[^181.1]: Rather than seeing predictive analytics as a closed form of an open world, I am suggesting that we might begin to locate it in the joint effectuations or intersections within models.
 
-[^45]: What have ethnomethodologists and others actually said about lists?  
+Patel described the data that Tesco keeps on grocery purchases: 'We have 52 weeks of purchase data for each customer.' These transformations have been widely discussed in the context of big data, where questions of who has how much data are usually most prominent (see [@Kitchin_2014]). In terms of the ways that lists order the world, the amount of data is not perhaps not so important as the way in which list-making is re-ordered via a model of personhood. 
 
-## 5. 'We have 52 weeks of data for each customer': how is order constructed -- from history?
+It uses many shopping lists to identify associations between things and then uses the strongest associations to recommend additions to a current list. The 'relevancy model,' however, tries to do something different. 
 
-We know that the construction of lists has been transformed by recommender systems.
-Patel described the data that Tesco keeps on grocery purchases: 'We have 52 weeks of purchase data for each customer.' 
-These transformations have been widely discussed in the context of big data, where questions of who has how much data are usually most prominent (see [@Kitchin_2014]).
-In terms of the ways that lists order the world, the amount of data is not perhaps not so important as the way in which list-making is re-distributed in the world. 
-I want to dwell on this idea for a while.
+Hansen attributes 'real potential' to data. In terms that somewhat echo big data epistemics, data has an associative propensity, according to Hansen:
 
+> [S]urrounding any delimited predictive system is a larger field of data -- what I elsewhere call a “surplus of sensibility” -- that, viewed speculatively, indexes the causal efficacy of the total situation within which this delimited system operates. (Effectively, the latter gains its reliability from closing off this larger surplus of sensibility, thereby transforming an always excessive propensity into a [provisionally] closed dataset.) Because it affords data that exceed whatever any given predictive system might include, the data of the world’s causal efficacy -- the data constituting its real potentiality -- always and in principle facilitates knowledge that cannot be restricted to any particular agenda [@Hansen_2015, 126-7].
 
-We have seen one ways in which lists might be constructed in a recommender system.[^56] 
+The underlying contrast between an open world and a 'provisionally closed dataset' is both enabling and limiting. Hansen's account opposes closed prediction to the open propensities of a data-world. A closed set is surrounded and conditioned by an open set teeming with potentials. If we think of the  new model that Patel describes as the delimited (or delimiting?) system within   the larger surplus of sensibility, how would that help us understand what the 'Have you forgotten?' recommendations do? It enables us to understand -- as we will see next -- what the Tesco relevancy model borrows from the world. It limits, on the other hand, our understanding of how predictive analytics, or any other ordering device, themselves remain open, require configuration, and only exist amidst technical ensembles whose operation remains obscure.   
 
-[^56]: The first uses history and existence of previous lists, including the customer's own list, to populate a new list. 
+```{r models}
+include_graphics('figure/patel_compares_models.png')
+```
 
-It uses many shopping lists to identify associations between things and then uses the strongest associations to recommend additions to a current list. 
-The 'relevancy model,' however, tries to do something different. 
-The problem that the proliferation of things on the shelves of supermarket or grocery warehouse confronts is partly combinatorial.
-With  `r total` products (actually Patel mentions 200,000 products) can be combined in truly astronomical numbers of combinations.
-If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible combinations.
-Some of this vast number of possible shopping lists is highly unlikely in terms of shopping lists and histories of shopping, but potentially highly interesting and value as recommendation.   
+Patel introduced the relevancy model with a graph familiar to machine learning and statistical modelling. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different models. In media theoretical terms, the graph indexes the 'causal efficacy' of a recommender system, its capacity to include and transform propensities or 'real potentialities' into operational knowledge.   The graph compares the old rule-based recommender systems with some of the relevancy-model alternatives -- logistic regression, random forests, and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did better than other alternatives. Why did she say little about the model, which after all, produces the probabilistic predictions on which everything in the recommendation list depends and hence the conversion experience? Her interest lay in the precision of the recommendations, and, crucially for our purposes, in how 'most of the gain comes from thinking of good features.'
 
-> This means, to put it slightly differently, that surrounding any delimited predictive system is a larger field of data -- what I elsewhere call a “surplus of sensibility” -- that, viewed speculatively, indexes the causal efficacy of the total situation within which this delimited system operates. (Effectively, the latter gains its reliability from closing off this larger surplus of sensibility, thereby transforming an always excessive propensity into a [provisionally] closed dataset.) Because it affords data that exceed whatever any given predictive system might include, the data of the world’s causal efficacy -- the data constituting its real potentiality -- always and in principle facilitates knowledge that cannot be restricted to any particular agenda [@Hansen_2015, 126-7]
-
-Hansen's account opposes the closed prediction to the open propensities of the data-world. A closed set is surrounded and conditioned by an open set that is full of many more potentials. However, if we think of the  new model that Patel describes as the delimited (or delimiting?) system within   the larger surplus of sensibility, how that help us understand what the 'Have you forgotten?' recommendations do?
-
-- history of data accumulations;
-
-- shift from data mining to personalization? 
-- use some of the Varian, Linden, Resnick, Schaffer literature
- 
-## 6. Gain: use good features to build models 
-
-- what counts as a good feature? See Domingos on this
-- move from Dunnhumby's ClubCard focus to much more general world of predictive models (e.g. Facebook use a million models, etc.)
-- the model counts for surprisingly little -- at least, they all seem similar ... rather what counts is all that stuff on working with substitutions, similiarities and complementarities for each person.   
-
-It was surprising that Patel spoke relatively briefly about the new models. She showed a graph that compared the old rule-based model with some of the new alternatives -- logistic regression, random forests, and a few others. She dismissed most of the models quite quickly and focused only on one, the logistic regression model. Or more accurately, she just said that logistic regression did better than other, and there was little more to discuss on that front.  
-
-Why did she say little about the model, which after all, produces the probabilistic predictions on which everything in the recommendation list depends and hence the conversion experience? 
-
-![Models](figure/patel_compares_models.png)
-
-The graph compares models in terms of their predictions and how those predictions came to pass. The two columns on the left show earlier models -- the global model, which is not personalized, the association rules model for individual customers, and then the new relevance models (logistic regression, random forest, etc) for customers. An increase in precision means more sales.  Her interest lay in the relevance of the recommendations, and in particular, in how 'most of the gain comes from thinking of good features.'
-
-The fact that so little was said about the models themselves suggests that they are now largely taken for granted in recommender systems.[^57] The models Patel mentioned are all classifiers, predictive models that treat a set of variables in a datasets as a vector space in which good classification means finding a way of defining a decision boundary between points that belong to different classes of things. Here the classes of things are binary: `recommended` or `not recommended.` Some classifier models, including logistic regression, generate a probability rather than simply a classification.  
-
-[^57]: The measure of doing better here is called precision, and it measures the proportion of the recommended products that are actually purchased.     
-
-So, the model generates probabilities for each product for each customer. The 'good features' strengthen associations between people and things. Each thing has a propensity in relation to each customer. 
+The models Patel so briefly mentioned are all classifiers, predictive models that spatially order  variables in a dataset as a high dimensional vector space. In the vector space, classification means drawing a decision boundary between points that henceforth belong to different classes of things [@Mackenzie_2015]. Here the classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a class is expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned. In becoming predictive, the 'Have You Forgotten?' recommendations have included a version of the social in the form of a  model that seeks to identify relations between variables.  The relevance of recommendations pivots on the apprehension of social order by a model. 
 
 ## 7. Sparsity: output 20 recommendations from 200,000 products
 
-What counts as a good feature in a world of predictive lists? Some things in the data that increases the precision of the model. The problem that Tesco faces, however, is that there are too many possible recommendations to be tested. They sell around 200,000 products and no customer wants to buy any more than a fraction of a per cent of those products. The recommendation list needs to very short.
+Note that neither the infrastructure that marshals the Tesco customer data  - Patel will mention `Hadoop` -- nor the predictive analytic device -- the logistic regression model -- loom very large in the conversion of the recommender system. 'Most of the gain comes,' Patel observes, 'from thinking of good features.' While this is almost a truism in big data practice (see, for instance, [@Domingos_2012]), what counts as a good feature in a shopping list? 
 
-Predictive models, we might say, encounter their own surplus of sensibility in the data as they search for the most accurate predictions. A  very brief comment from Patel -- 'we have lots of zeros' -- points to the problem here. Each of the millions of Tesco online grocery shoppers has bought some selection of the 200,000 products. But the product-customer matrix, the basic vector-space in which all recommender systems operate, remain very sparse and unpopulated. 
+A  very brief comment from Patel -- 'we have lots of zeros' -- points to the locus of this thinking: the vast, nearly empty matrix of customer-product associations. Given that most things in Tesco remain relatively inert in relation to each other, a matrix that records association between individual people and different products is bound to be mostly empty.   Say Tesco has 1 million online customers. Each of online  shopper has bought some selection of the 200,000 products. But the product-customer matrix, the basic vector-space in which all recommender systems operate, remain very sparse and unpopulated. The customer-product data matrix will be `r format(1e6 * 2e5)` in size. Given that any one customer is likely to only have bought 100 different products, the probability matrix will be close to `r format(100-(100/2e5)*100, 2)`% empty. The data is, as Patel put it, 'massively unbalanced', and such imbalance would heavily bias recommendation towards commonly and only impersonally relevant suggestions, suggestions that would likely not produce the desired conversion experience. Rather than a surplus of sensibility, predictive models, we might say, encounter their own dearth of sensibility in the data. 
 
-Say Tesco has 1 million online customers. A data matrix for just whether they ever bought a particular product or not will be `r format(1e6 * 2e5)` in size. Given that any one customer is like to only have bought 100 different products, the probability matrix will be `r format(100-(100/2e5)*100, 2)`% empty. 
-
-```{r sparsity, echo=FALSE, cache=TRUE, fig.margin=FALSE, fig.cap ='The sparsity of predictions' }
+```{r sparsity, echo=FALSE, cache=TRUE, fig.margin=FALSE, fig.cap ='Sparsity of the customer-product association matrix' }
 library(ggplot2)
 library(reshape2)
 p = as.logical(rbinom(n=2e5, size=1, prob=0.001))
@@ -257,11 +221,13 @@ m = (matrix(p, nrow=1000, byrow=TRUE))
 melted <- melt(m)
 melted$value <- as.logical(melted$value)
 ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
-    scale_fill_manual(values = c("grey", "black"))
+    scale_fill_manual(values = c("grey", "black")) + xlab('Customer id') + ylab('Product id')
  
 ```
 
-Having too many things to list -- this must be happening in many settings -- videos, social networks, products, etc. -- is not the real problem. The problem is that 'massively unbalanced data,' which means that different classes of products are not equally represented. Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, in this case, random under-sampling or removal of some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.  
+Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
+
+HERE
 
 In Hansen's or Badiou's terms, this is one way in which the dataset is closed. While 200,000 products is still a closed dataset since it has a defined number of items, undersampling alters the frequency of occurrence of very common items so that the predictive models are not distracted by them. 
  
