--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -227,56 +227,43 @@ ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
 
 Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
 
-HERE
+Amidst this imbalance, distortion and deficit of sensibility given in the data, 'thinking of good feature' -- ways of traversing the data -- becomes central. For our purposes, the exact details of these features matter less than the way in which propensities become probabilities. The dataset, as we will see, will not be practically treated as 'closed,' as Hansen puts it. Although it undergoes acts of enclosure (for instance, in the transformation of the customer-product matrix into vector space), these acts are not conclusive. 'Thinking of good features' potentially re-opens the dataset and sometimes completely transforms it. This thinking, which I suggest occurs mostly in quite obscure yet central zones of data practice, is highly mixed. It combines experimental techniques, infrastructural dynamics, seasonal and daily temporalities, and above all, an ongoing engagement with probabilities and their fungibilities.
 
-In Hansen's or Badiou's terms, this is one way in which the dataset is closed. While 200,000 products is still a closed dataset since it has a defined number of items, undersampling alters the frequency of occurrence of very common items so that the predictive models are not distracted by them. 
+##  Experimental settings: A/B allocation and uplift
+
+|Test A|Test B|
+|---|---|
+|Control A|Control B|
+
+The relevancy model was deployed experimentally in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in the table. In the  A/B trial,  an identical shopping list, or even the same person, might receive different recommendations.   The randomised application of the model, drawing on protocols for randomised clinical trials first developed in the 1960s, is widely used in social media platforms and hence in all recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds another layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally. 
+
+[^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operation in its infrastructure. TBA[] 
  
-So the raw data -- the 52 weeks of purchases for each customer -- can be rewoven with the database of Tesco products to increase the density of the data in ways that helps the model. Patel mentions some of the 'features' used in the new model but somewhat strangely at this point, her presentation turns toward the difficulties of measuring the success of the model and the infrastructural limitations on making recommendations in ways that are more alive to what is happening right now. 
 
-## 8. Value: Balancing conversion vs spend
-The value of an ordering
- 
-## 9. Metric: precision-at-K
- 
-The discussion of imperfection was brief - it incorporated the notion of recommendations weighted by price and the notion of precision (or the proportion of products actually purchased.). Patel simply said that this metric was imperfect, but without elaborating why. Instead she moved to describe some of the ways in which the recommender system worked in practice. 
+It is perhaps significant that this random allocation of customers to control and test groups occurs without any relation to the particular profile or propensities of the customer. It seeks to statistically validate the effects -- the *uplift* -- of the model on  conversion events by allowing the effects of the model on what people do to be measured. The lift or uplift refers to conversion events associated with the same groups of people. Effectively is an experiment in inhabiting two different worlds, the randomised control trial  sets up a feedback look between the predictive model, the logistic regression, and the world. Once the experimental uplift methodology is in place, the recommender system can constantly modify the recommendation list in light of subsequent data on the uplift. Predictions, then, are not bound by fixed parameters of the model. 
 
-## 10. Experimental settings: A/B allocation and uplift
+[^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models. Market researchers and data miners seem to have started adopting a statistically grounded experimental predictive practice sometimes around 2000. See for instance [@Almquist_2001]  Response modelling, 'propensity' modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.  
 
-![A/B testing](figure/a_b_tests.png) 
-
-First of all, the new model was deployed experimentally in a random A/B controlled trial. This means that all customers are allocated to one of four categories as shown in the figure. For an identical shopping list, or even for the same person, it is possible to receive different recommendations.    
-
-This randomising of the application of the model, drawing on protocols for randomised clinical trials first developed in the 1960s, is widely used in social media platforms and hence in all recommender systems. It is difficult to gauge how much. Facebook reports that it has more than 1 million models operation in its infrastructure. [TBA: ref for FBflow]   We could also discuss the integration of experiments into the operational infrastructures at Google.[REF tba] 
- 
-Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds another layer of probability to the recommender system. This is done in the name of statistical validation of the effects or the uplift of the model. It also suggests that the effects of the model cannot be known in advance -- they can only be observed experimentally. Does this experimentality of the list point more to the propensities that Hansen says saturate experience?  
-
-It is perhaps significant that this random allocation of customers to control and test groups occurs without any relation to the particular profile or propensities of the customer. It seeks to statistically validate the effects -- the *uplift* -- of the model on  conversion events by allowing the effects of the model on what people do to be measured. The lift or uplift refers to a change in events associated with the same groups of people. This effectively is an experiment in inhabiting two different worlds.  This sets up a feedback look between the predictive model, the logistic regression, and the operation of the recommendation system.[^122] Once the experimental uplift methodology is in place, the recommender system can constantly modify the recommendation list in light of subsequent data on the uplift. Predictions, then, are not bound by fixed parameters of the model. 
-
-[^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models. Market researchers and data miners seem to have started adopting a statistically grounded experimental predictive practice sometimes around 2000. See for instance [@Almquist_2001]  Response modelling, propensity modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.  Interestingly, these 
-
-
-## 11. Infrastructure: realtime engine serves up top 5
+## Infrastructure: realtime engine serves up top 5
 
 ![Realtime infrastructure and its limits](figure/hadoop.png)
 
-While much discussion of recent media has highlighted its realtime operation, Patel's description of the infrastructure that implements the new model suggested a different temporal patterning. While raw data from Tesco Online feeds into the model every hour, it seems that recommendation list for each customer is only generated once a week. This makes sense. Customers only shop online every few days at the most, and in some cases, only every few weeks. To continually update the top 200 recommendations for every customer would be computationally expensive.   
+Much discussion of recent media has highlighted its real-time operation (see [@Kittler_1993; @Virilio_1997; @Hansen_2015; @Bollmer_2016]). Patel's description of the relevancy model infrastructure suggested a different temporal patterning. While raw data from Tesco Online feeds into the model every hour, a recommendation list for each customer is only generated once a week. Customers only shop online every few days at the most, and in some cases, only every few weeks. To continually update the top 200 recommendations for every customer would be computationally expensive.   
 
-Patel did not say much else about the infrastructure but the 200 recommendations generated each week are certainly never seen by the customers. The realtime engine that actually generates results shown on the Tesco Online website only shows 5 after 'applying business rules.' Again, this might be seen as corroborating Hansen and Badiou's insistence on the necessarily limited grasp of any prediction system on the situation it encounters. Even the new model, situated amidst its experimental setup cannot fully encompass the surplus of sensibility it encounters.    
+A customer does not see their 200 weekly recommendations. The recommender system generates recommendations, but after 'applying business rules, only five are  shown on the Tesco Online website. Patel briefly mentioned  specific infrastructural elements such as `hadoop` [@ApacheSoftwareFoundation_2009]. The logistics of running a predictive model affect listing practices.  The possibility of adjusting the recommendations for every customer weekly derives from an infrastructure capable of collecting data, assimilating that data to a predictive model able to generate approximately 200 million relevant recommendations, where 'relevance' depends on a matrix of probabilities of associations between people and things that shifts in time. Like the global supply chain logistics optimised for flow of commodities [@Tsing_2009; @Nielson_2012], `hadoop` and its legion of variants (`mahout`, `spark`, `hive`, `pig`, `yarn`) operationalise flows of data at an infrastructural rather than analytic scale. In many respects, the quickly glossed-over infrastructural deployment of DunnHumby's relevancy model is the primary conversion event: the logistic regression model at the heart of the recommender system is no longer an analytical device but an operational one. 
 
-The brief mention of specific infrastructural elements such as `hadoop` is, however, significant. It points to the temporality of infrastructures themselves as a component of list practices. The possibility of adjusting the recommendations for every customer weekly derives from an infrastructure capable of collecting data, assimilating that data to predictive model able to generate recommendations that are relevant to individuals amongst 200,000 products.  
-
-## 12. Similarity, substitution, complementarity and micrological propensities
+## Similarity, substitution, complementarity and micrological propensities
 
 ![Basket similarity](figure/patel_basket_similarity.png)
 
-What does it matter that recommendations are relevant? Relevance is closely connected to propensities in the predictive condition. From DunnHumby's standpoint, the relevance of a recommendation relates directly to conversion. From the standpoint of the ontological conversion, and  if Hansen is right, the real or actual fabric of prediction resides in the propensities of things, what he calls the 'complex and diffuse calculus' that only subsequently and provisionally congeals as a conversion event. The 'micrological propensities' of things feed directly into an sense of the relevance of recommendations. 
+The propensities of things become probabilities in predictive analytics only to the extent that probabilities themselves become propensities. Recommendations are relevant in a recommender system or any other predictive model to the precise extent of their probability. Relevance is closely connected to propensities in the predictive condition. From DunnHumby's standpoint, the relevance of a recommendation relates directly to conversion events. Conversion events happen in the world. They actualise a propensity that hitherto remained either latent or potential. From the standpoint of the ontological conversion between probability and propensity,  prediction stems from the propensities of things, what Hansen describes as the 'complex and diffuse calculus' that only subsequently and provisionally congeals as a conversion event. The 'micrological propensities' of things support the relevance of recommendations. 
 
-How does the DunnHumby model deal with the micrological propensities of things? In her presentation, Patel  spent quite a lot of time addressing the problem of basket similarity in terms of substitutions and complementarities between things. She concludes by saying 'basket similarity is the future' and 'complementarities drive conversion.'  
+How does the DunnHumby model deal with the micrological propensities of things? In her presentation, Patel  spent quite a lot of time addressing the problem of 'basket similarity,' the problem that the recommender system might recommend, for good reason, something similar to items already in a customer's basket. The recommender system needs to know, or the statistical model needs to know how things are related to each other so that it does not waste recommendations on overly similar items. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation for an item that complements items in their list. 
 
-Whereas the association rules focus on complementarities -- if you buy bread, you might want milk, if you buy beer, you might want diapers -- the substitutions look for micrological propensities that relate to gradations of preference, and variations in time and place.  Micrological propensities in the list relate to a particular time and place, amidst a continuously differentiable pathways between things.
+Whereas the association rule-based recommender system focused on thing-thing complementarities -- if you buy bread, you might want milk, if you buy beer, you might want diapers -- the substitutions look for micrological propensities that relate to gradations of preference, and variations in time and place.  Micrological propensities in the list relate to a particular time and place, amidst a continuously differentiable pathways between things.
 
-How do things associate with each other in  substitutions and complementarities? Patel's comments on this are very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and re-writings. Like the mention of `hadoop`, what Patel said about substitution and complementarity implies extensive but relatively well-established data practices. She speaks for instance of a 'design matrix of 14,000 columns' and the use of `L1 regularization` to drive coefficients down to zero. This is machine learning talk. What is being modelled here? No longer whether to recommend a product to a customer or not, but whether something could be substituted for what is already in the recommendation list.  
-
+How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries might be shaped by wider social groups, orderings and circumstances?  Patel's comments on this were very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and intensive re-writings. Like the mention of `hadoop`, what Patel said about substitution and complementarity draws on extensive but relatively well-established data practices. She mentioned,  for instance,  a 'design matrix of 14,000 columns' and the use of '`L1 regularization` to drive coefficients down to zero' in a new feature of the model called 'self-learning substitutes,' a model that examines the recommendation list and predicts substitutes and complementarities for 'all products' in the list. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response').   What is being modelled here? No longer whether to recommend a product to a customer or not, but whether something could be substitute or complement  what is already in the recommendation list.
+HERE
 ```{r biscuits, echo=FALSE, cache=TRUE, fig.margin=TRUE}
     library(readr)
     library(knitr)
